Have an actually user link to get to Sign up screen, minor styling as well. Need major styling though

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My App</title>
+  <title>Vis-à-vis</title>
     <link rel="icon" href="client/assets/favicon.ico" type="image/x-icon">
 </head>
 
